Troubleshooting layout issues.

--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -274,6 +274,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 .input-group .btn {
   margin: 4px;
@@ -470,12 +471,10 @@ a {
 .testimonial__image {
   width: 100%;
 }
-.icon-container--accent {
+.testimonial__image > .icon-container {
   position: absolute;
   top: 3rem;
-  right: 0;
-  left: 47%;
-  top: 12%;
+  right: 760px;
 }
 
 @media screen and (min-width: 768px) {
@@ -564,6 +563,10 @@ a {
 .block {
   --padding-vertical: 6rem;
   padding: var(--padding-vertical) 2rem;
+}
+.block__header {
+  text-align: center;
+  margin-bottom: 4rem;
 }
 
 .block__heading {
@@ -685,8 +688,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
@@ -750,5 +754,59 @@ a {
   .block-showcase__image {
     width: auto;
     max-width: 700px;
+  }
+}
+/* Footer */
+
+.footer {
+  background: #232323;
+}
+
+.footer__section {
+  padding: 2rem;
+  border-bottom: 1px solid #393939;
+}
+.footer__heading {
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.footer__brand {
+  margin-top: 5rem;
+  text-align: center;
+}
+.footer__copyrigt {
+  font-size: 2.1rem;
+  color: #fff;
+  opacity: 0.3;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__sections {
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  }
+  .footer .collapsible__chevron {
+    display: none;
+  }
+  .footer .collapsible__content {
+    opacity: 1;
+    max-height: 100%;
+  }
+  .footer__brand {
+    order: -1;
+    margin-top: 1rem;
+  }
+  .footer__brand img {
+    /* TODO: consider refactoring this and applying it to all images */
+    width: 100%;
+    max-width: 230px;
+  }
+  .footer__copyright {
+    font-size: 1.5rem;
+  }
+  .footer__section {
+    border: none;
+  }
+  .footer__heading {
+    font-size: 1.6rem;
   }
 }
